# llama-cpp-turboquant-guide

./: ADR-2026-04-11-meta-mode-and-3090-check.md  Dockerfile  LICENSE  README.md  SESSION-NOTES-2026-04-11.md  WHITEPAPER.de.md  pyproject.toml
profiles/: baseline.yaml  turbo3-100k.yaml  turbo3-64k-4070.yaml
qllama/: __init__.py  auth.py  config.py  main.py  profiles.py  zeroth_hooks.py
qllama/middleware/: __init__.py  http_observability.py
qllama/observability/: __init__.py  logging.py  metrics.py  state.py
qllama/routes/: __init__.py  openai_proxy.py  system.py
qllama/runtime/: __init__.py  llama_server.py
results/: dry-run-mistral.json  dry-run-summary.json  dry-run-summary.md  turboquant-3090-all-runs-2026-04.json  turboquant-4070-laptop-2026-04-01.json  turboquant-4070-results-2026-04-01.json  turboquant-rtx3090-2026-04-01-v2.json  turboquant-rtx3090-2026-04-01.json
results/schema/: run-result.schema.json
scripts/: download-model.sh  run-baseline.sh  run-qllama.sh  run-turbo.sh
scripts/eval/: collect_results.py  report.py  run_matrix.py
scripts/eval/prompts/: fallback-regression.jsonl  long-context.jsonl  runtime-regression.jsonl
scripts/smoke/: operability.sh  runtime-core.sh
tests/: conftest.py  test_eval_harness.py  test_fallback_chain.py  test_http_observability.py  test_observability_foundation.py  test_operability_contract.py  test_report_generation.py  test_results_schema.py  test_runtime_state.py  test_zeroth_hooks.py
