[project]
name = "qllama"
version = "0.1.0"
description = "FastAPI control plane around llama-server for TurboQuant-backed local inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "asgi-correlation-id>=4.3,<5.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "prometheus-client>=0.22,<1.0",
  "pydantic>=2.11,<3.0",
  "PyYAML>=6.0,<7.0",
  "structlog>=25.0,<26.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "jsonschema>=4.25,<5.0",
  "pytest>=9.0,<10.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qllama*"]
